# src/routes/v1/payments.route.js
@@ -6,7 +6,7 @@ const paymentController = require('../../controllers/payments.controller');
 
 const router = express.Router();
 
-router.route('/generate/account_link').get(auth(), validate({}), paymentController.generateAccountLink);
+router.route('/generate/account_link/:userId').get(auth(), validate({}), paymentController.generateAccountLink);
 
 router.route('/charge-generate-intent/experience').post(auth(), validate({}), paymentController.chargeCustomer);
 router.route('/methods/card').post(auth(), validate({}), paymentController.savePaymentMethod);
